# llm-server

./: README.md  pyproject.toml
.github/workflows/: tests.yml
scripts/: client_test.py
src/llm_server/: __init__.py  application.py  backend.py  gui_app.py  helper.py  schemas.py  server.py
src/llm_server/helper/: gui_helper.py  helper.py
tests/: test_server.py
