[project]
name = "llm_server"  # The pip install <name>.
version = "0.1.0"
description = "Template for repos that are intended to be packaged libraries."
readme = "README.md"
authors = [{ name = "Eric Apgar" }]
urls = { "Homepage" = "https://github.com/EricApgar/llm-server" }
requires-python = "~=3.12.0"

dependencies = [
    "fastapi>=0.135.1",
    "llm[all]",
    "uvicorn>=0.41.0",
]

[project.optional-dependencies]
gui = [
    "nicegui>=3.8.0",
]

[tool.uv.sources]
llm = { git = "https://github.com/EricApgar/large-language-model" }

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.setuptools]
package-dir = {"" = "src"}  # Important that this folder is the name of the folder where all the files sit under.

[tool.setuptools.packages.find]
where = ["src"]
include = ["llm_server*"]  # The import <name>. Defined by the name of the folder under src.
